# client

./: .coverage  .dockerignore  .env.example  .gitignore  0033_create_attempt_chats_junction.sql  0034_add_one_active_prompt_constraint.sql  0036_add_agent_persona_prompts_junction.sql  0037_create_department_binary_tables.sql  0038_dashboard_bundle_indexes.sql  0038_delete_persona_department_links.sql  0039_dashboard_history_indexes.sql  0040_reports_bundle_indexes.sql  0041_pricing_analytics_indexes.sql  AGENTS.md  AGENT_AUDIT_SUMMARY.md  AGENT_SETUP_PLAN.md  ANALYTICS_API_MAPPING.md  ANALYTICS_COMPLETE_MIGRATION.md  ANALYTICS_FILES_CREATED.md  ANALYTICS_MIGRATION_SUMMARY.md  ANALYTICS_PYTHON_SQL_MIGRATION.md  ANALYTICS_QUERY_PATTERN_GUIDE.md  ANALYTICS_ROUTES_QUICK_REFERENCE.md  ANALYTICS_SERVER_SETUP.md  ANALYTICS_VERIFICATION.md  ARTIFACT.md  ARTIFACTS.md  ARTIFACTS_AUDIT_REPORT.md  ARTIFACT_COMPONENT_SPECS.md  ARTIFACT_RESOURCE_AUDIT.md  AUDIT.md  AUDIT_REMAINING_PYTHON_ISSUES.md  BCNF_MIGRATION_MANUAL_CHANGES.md  BCNF_MIGRATION_STATUS.md  CLAUDE.md  CLIENT_BCNF_MIGRATION_STATUS.md  COVERAGE_PRIORITY_REPORT.md  CURRENT_PROGRESS.md  DATABASE.md  DEBUG_INFO_V2_MIGRATION_COMPLETE.md  (+115 more)
server/: .coverage  .dockerignore  .gitignore  Dockerfile  HANDOFF_MIGRATION_87.md  Makefile  convert_queries.py  generate_socket_entries.py  generate_socket_resources.py  generated_simulation_data.sql  mypy.ini  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rubric.py  test_resources.py  ws.json
server/.cursor/rules/: server.mdc
server/app/: SERVICEOPTSPEC.md  config.py  db.py  extensions.py  health.py  init.py  main.py  models.py  registry.py  root_info.py  schema_changed.py  server.py
server/app/agents/: aggressive.py  classify.py  confused.py  course.py  evaluate.py  generic.py  grading.py  happy.py  scenario.py  selector.py
server/app/auth/: __init__.py  access.py  analytics.py  callback.py  drafts.py  email.py  generate.py  group.py  page.py  profile.py  route_permissions.py  settings.py  simulatable.py  types.py
server/app/cache/: README.md  __init__.py  keys.py  query_client.py
server/app/core/: guest_profile.py  keycloak_sync.py
server/app/default_idp/: oidc.py
server/app/events/: __init__.py  activity.py  agent.py  attempt.py  auth.py  benchmark.py  chat.py  cohort.py  dashboard.py  department.py  document.py  eval.py  field.py  generation.py  group.py  health.py  home.py  invocation.py  leaderboard.py  model.py  parameter.py  persona.py  practice.py  pricing.py  profile.py  provider.py  record.py  rubric.py  scenario.py  session.py  setting.py  simulation.py  test.py  tool.py  types.py
server/app/infra/: STANDARDS.md  __init__.py  activity_context.py  activity_docs.py  activity_export.py  activity_refresh.py  agent_context.py  agent_create.py  agent_delete.py  agent_docs.py  agent_draft.py  agent_drafts.py  agent_duplicate.py  agent_export.py  agent_permissions_context.py  agent_refresh.py  agent_save.py  agent_search.py  agent_update.py  analytics_facets.py  attempt_context.py  attempt_docs.py  attempt_export.py  attempt_refresh.py  auth_context.py  auth_create.py  auth_delete.py  auth_docs.py  auth_draft.py  auth_drafts.py  auth_duplicate.py  auth_export.py  auth_permissions_context.py  auth_refresh.py  auth_save.py  auth_search.py  auth_update.py  benchmark_context.py  benchmark_docs.py  benchmark_export.py  (+280 more)
server/app/mcp/: __init__.py  docs.py  endpoints.py  oauth.py  server.py
server/app/metrics/: __init__.py  collector.py  health.py  snapshot.py
server/app/middleware/: __init__.py  db_logging.py
server/app/queries/: __init__.py  agent_queries.py  analytics_queries.py  assistant_queries.py  attempts_queries.py  auth_queries.py  base_queries.py  breadcrumb_queries.py  cohort_queries.py  dashboard_queries.py  department_queries.py  document_queries.py  export_queries.py  feedback_queries.py  grading_queries.py  health_queries.py  home_queries.py  leaderboard_queries.py  log_queries.py  model_run_queries.py  parameter_queries.py  persona_queries.py  practice_queries.py  (+9 more)
server/csv/: 6790ce6a-d2ef-4af9-92ec-f3a4d9ae4394.csv
server/glow_server.egg-info/: PKG-INFO  SOURCES.txt
server/model/: Dockerfile  constraints.txt  requirements.txt  skip_cuda.txt
server/routers/: documents.py
server/scripts/: check_enum_comparisons.py  check_inline_sql.py  check_unused_sql.py  configure-mcp-token-lifespan.py  generate_drizzle.py  generate_models.py  generate_pytest_tests.py  generate_registry.py  generate_registry_relations.py  generate_simulation_data.py  generate_sql_types.py  generate_ws_contract.py  inspect_keycloak_flow.py  sql_introspect.py  sql_typegen.py  test_client.py  validate_tool_templates.py  watch_python_changes.py
server/sql/: __init__.py
server/tests/: HANDOFF_TESTABILITY.md  README.md  bootstrap_sql.py  conftest.py  helpers.py  seed_helpers.py  seed_ids.py  test_assistant_service.py  test_chat.py  test_health_service.py  test_main.py  test_server_app.py  test_well_known.py
server/uploads/: agents_export_2026-03-10_124148.csv  agents_export_2026-03-10_124227.csv  agents_export_2026-03-11_144518.csv  agents_export_2026-03-12_173306.csv  auths_export_2026-03-12_173349.csv  fields_export_2026-03-11_163342.csv  models_export_2026-03-11_163352.csv  parameters_export_2026-03-11_163355.csv  personas_export_2026-03-10_113943.csv  personas_export_2026-03-10_114041.csv  personas_export_2026-03-10_114103.csv  personas_export_2026-03-10_114127.csv  personas_export_2026-03-10_114144.csv  personas_export_2026-03-10_123242.csv  personas_export_2026-03-10_123317.csv  personas_export_2026-03-11_163401.csv  profiles_export_2026-03-11_163412.csv  providers_export_2026-03-11_163417.csv  rubrics_export_2026-03-11_163422.csv  scenarios_export_2026-03-10_123244.csv  scenarios_export_2026-03-10_123319.csv  scenarios_export_2026-03-11_163428.csv  settings_export_2026-03-11_163431.csv  simulations_export_2026-03-11_163435.csv  tools_export_2026-03-11_163441.csv
server/utils/: sql_helper.py  sql_nest.py  sql_typegen.py
(+30688 files in other folders)
