[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glow"
version = "0.1.0"
description = "GLOW - Graduate Learning Orientation Workshop"
authors = [
    {name = "GLOW Team", email = "team@glow.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn[standard]==0.35.0",
    "python-dotenv==1.1.1",
    "asyncpg==0.30.0",
    "openai>=2.6.1",
    "openai-agents[litellm]>=0.6.1",
    "python-docx==1.1.0",
    "lxml==6.0.0",
    "numpy==1.24.4",
    "jinja2==3.1.4",
    "gunicorn==23.0.0",
    "pypdf==5.9.0",
    "python-socketio==5.10.0",
    "redis==5.0.4",
    "fastmcp==2.10.2",
    "cachetools==5.3.2",
    "cryptography==44.0.2",
    "click==8.1.7",
    "cffi==1.17.1",
    "starlette==0.46.2",
    "pydantic>=2.11.7,<3",
    "requests==2.32.4",
    "reportlab==4.0.4",
    # Lightweight text similarity / fuzzy matching
    "rapidfuzz==3.9.1",
    "textdistance==4.6.2",
    "pymupdf==1.24.10",
    # System metrics
    "psutil==5.9.8",
    # Async testing
    "pytest-asyncio==0.24.0",
    # Dev/test tooling
    "ruff",
    "mypy",
    "respx",
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0",
    "testcontainers[postgresql]==4.0.0",
    # E2E testing
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "python-keycloak>=2.10.0",
]

[project.scripts]
# Note: The 'main' function needs to be defined in app/main.py for this to work
glow-server = "app.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 88
cache-dir = "server/.ruff_cache"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",   # line too long, handled by ruff format
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ANN101", # missing type annotation for self
]

# Allow Any types in test files (mocks need flexibility)
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ANN401"]  # Dynamically typed expressions in test mocks

# Configure Ruff to replace isort
[tool.ruff.lint.isort]
known-first-party = ["app"]

# Configure Ruff to replace Black
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
cache_dir = "server/.mypy_cache"

# This is more precise than a global `ignore_missing_imports = true`
[[tool.mypy.overrides]]
module = [
    "aiortc.*",
    "av.*",
    "socketio.*",
    "sqlacodegen.*",
    "gunicorn.*",
    "boto3.*",
    "botocore.*",
    "aioboto3.*",
    "asyncpg.*",
    "reportlab.*",
    "testcontainers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["server/tests"]
python_files = "test_*.py"
# Be explicit about asyncio mode for pytest-asyncio >= 0.24
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
cache_dir = "server/.pytest_cache"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "fast: marks tests as fast (deselect with '-m \"not fast\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["server/app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]
data_file = "server/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
html_dir = "server/htmlcov"